Fixed layout issue.

--- a/source/CommonJobs/CommonJobs.Mvc.UI/Content/EditEmployee/EditEmployee.less
+++ b/source/CommonJobs/CommonJobs.Mvc.UI/Content/EditEmployee/EditEmployee.less
@@ -119,10 +119,10 @@
 			border: 1px solid black;
 			box-sizing: border-box;
 			float: left;
-			height: 240px;
+			//height: 240px;
 			margin: 0 20px 1em 0;
 			padding: 1em;
-			width: 185px;
+			//width: 185px;
 
 			&.last {
 				margin-right: 0;
@@ -156,8 +156,8 @@
 		}
 
 		.attachment-slot-empty {
-			height: 182px;
-			width: 156px;
+			min-height: 182px;
+			min-width: 150px;
 			border: 1px dashed black; 
 			.rounded_corners;
 
