--- a/source/CommonJobs/CommonJobs.Mvc.UI/Content/StylesBase.less
+++ b/source/CommonJobs/CommonJobs.Mvc.UI/Content/StylesBase.less
@@ -31,3 +31,7 @@ body
 {
 	margin: 0px;	
 }
+
+.clearFloats {
+	clear: both;
+}
